--- a/Numerisk integration.tex
+++ b/Numerisk integration.tex
@@ -9,9 +9,6 @@
 \usepackage{color}
 \usepackage[utf8]{inputenc}
 \usepackage{hyperref}
-\numberwithin{equation}{section}
-
-%\pagestyle{headings}
 
 \definecolor{codegreen}{rgb}{0,0.6,0}
 \definecolor{codegray}{rgb}{0.5,0.5,0.5}
@@ -40,21 +37,24 @@
 \lstset{style=mystyle}
 \renewcommand\lstlistingname{Fil}
 \renewcommand{\abstractname}{Hej}
+\addto{\captionsdanish}{\renewcommand{\abstractname}{Abstract}}
+\numberwithin{equation}{section}
 
-
+\pagestyle{headings}
 
 \begin{document}
-\title{Forberedelse til SRP-vejledning}
+\title{Numerisk Integration}
 \author{Søren Fritzbøger 3F\\
-HTX Hillerød}
-%\renewcommand{\today}{}
+HTX Hillerød - Erhversskolen Nordsjælland\\
+Vejleder: Stig og CHR}
+\renewcommand{\today}{2. Februar 2015}
 \maketitle
 
-%\begin{abstract}
-%This article demonstrates a basic set of LaTeX formatting commands.
-%Compare the typeset output side-by-side with the input document.smøøre
-%\end{abstract}
-%\tableofcontents
+\begin{abstract}
+This article demonstrates a basic set of LaTeX formatting commands.
+Compare the typeset output side-by-side with the input document.smøøre
+\end{abstract}
+\tableofcontents
 \section{Spørgsmål}
 \emph{Jeg har fået følgende spørgsmål stillet af Christian, som er min vejleder i IT}
 
@@ -75,58 +75,76 @@ analysere?)
 Disse spørgsmål vil jeg besvare på næste side.
 
 \newpage
-\section{Besvarelse}
-\subsection{Beskrivelse af emne}
-Jeg har valgt at skrive om \emph{Numerisk Integration} i mit Studieretningsprojekt. Numerisk integration er en metode hvor man tilnærmelsesvist kan bestemme arealet under en funktion\emph{(graf)}. Normalt bruger man bestemte integraler til dette, men når funktionen er så avanceret, som f.eks. $f(x)=e^{-x^2}$, er det ikke muligt at bruge bestemt integration til at finde arealet.
-Numerisk integration opdeler funktionen i mindre stykker, og udregner herefter arealet af dem og finder summen. Der findes flere forskellige metoder til at udregne arealet, og den mest simple af dem er midtpunktsreglen. Midspunktsreglen opdeler funktionen i en masse små rektangler, som er nemme at udregne arealet på. Metoden er som nævnt meget simpel, hvilket desværre også afpsejler sig i præcisionen, som man kan se på Figur 1.
-\begin{figure}[hbtp]
-\caption{Midpunktsreglen}
+\section{Trapezmetoden}
+\subsection{Bevis for trapezmetoden}
+Ved at bruge trapezmetoden kan vi tilnærmelsesvist finde det bestemte integral, selv for funktioner, hvor man ikke direkte kan bestemme det bestemte integral. Et eksempel på dette er funktionen $f(x)=e^{-x^{2}}$.
+For at bestemme arealet under en funktion vil vi gerne nærme os det bestemte integral.
+\begin{equation}
+\int_{a}^{b}f(x)dx \nonumber
+\end{equation}
+Når $a<b$ og $f$ er kontinuerlig og differentiabel i intervallet $[a;b]$, kan vi bruge trapezmetoden til at udregne det tilnærmelsesvist bestemte integral, som er arealet under funktionen.\\
+Som navnet trapezmetoden så fint hentyder til, opdeler vi vores funktion i en trapez, som vi udregner arealet af. Dette er illustreret på figur \ref{fig:trapezmetoden}
+\begin{figure}[tbph]
 \centering
-\includegraphics[scale=0.8]{midtpunktsreglen.jpg}
-\end{figure}
-
-Der findes også to andre metoder, henholdsvis trapez-metoden og simpsons-metode.\\
-\textbf{Trapezmetoden} er en del mere avanceret. I stedet for at dele funktionen op i rektangler deler den funktionen op i trapezer. Som man måske kan se på Figur 2, er denne metode mere præcis end midtpunktsreglen.
-\begin{figure}[hbtp]
+\includegraphics[scale=0.5]{Billeder/trapezmetoden.png}
 \caption{Trapezmetoden}
-\centering
-\includegraphics[scale=1]{trapezmetoden.png}
+\label{fig:trapezmetoden}
 \end{figure}
 
-Den sidste metode er simpsonsreglen, som virker ved at dele funktionen op i mindre og mere simple parabler, som man så finder arealet under.
+På figur \ref{fig:trapezmetoden} kan man se, hvordan trapezmetoden opdeler en parabel i en trapez. Denne trapez har intervallet $[a;b]$. Længden $a=f(a)$ og længden $b=f(b)$. Formlen for arealet af en trapez ses i formel \ref{eq:trapezareal}
+\begin{equation}
+\label{eq:trapezareal}
+A=\frac{1}{2}h\cdot(a+b)
+\end{equation}
+\begin{figure}
+	\centering
+	\includegraphics[scale=0.8]{Billeder/Trapez}
+	\caption{Trapez}
+	\label{fig:trapez}
+\end{figure}
 
-\subsection{Hvad spørger jeg om}
-\label{sec:hvad}
-Jeg har udarbejdet en række spørgsmål som kan bruges til at udarbejde en problemformulering:
-\begin{itemize}
-\item funktioner og integraler
-\begin{itemize}
-\item Hvordan beskrives en funktion matematisk?
-\item Hvad er integration af en funktion, og hvad er forskellen på bestemt og ubestemte integraler?
-\item Hvordan kan integraler bruges til at udregne arealet af en funktion?
-\end{itemize}
+Som man kan se på figur \ref{fig:trapez}, er $a$ og $b$ er sidelænger og $h$ er højden. I et trapez er højden defineret som afstanden mellem de to parallelle linjestykker, i dette tilfælde $a$ og $b$, som man kan se illustreret på figur \ref{fig:trapez}
+\\\\
+Som man kan se på figur \ref{fig:trapez} svarer højden $h$ til afstanden mellem $a$ og $b$, som svarer til $h=b-a$. Når man indsætter henholdsvis $a$ og $b$ værdien ind i vores $f(x)$ funktion, får vi vores $y$ værdi, som svarer til længden af henholdsvis $a$ og $b$.
+Hvis vi indsætter dette i arealet for en trapez, får vi derfor:
+\begin{align}
+A &= \frac{1}{2}h\cdot(a+b) &\Rightarrow \nonumber
+\\ &= \frac{1}{2}(b-a) \cdot (a+b) &\Rightarrow \nonumber
+\\ &= \frac{b-a}{2} (a+b) &\Rightarrow \nonumber
+\intertext{i stedet for $a$ og $b$ indsættes højderne på trapezens sider, $f(a)$ og $f(b)$} \nonumber
+\\ &= \frac{b-a}{2} (f(a)+f(b))
+\\ \intertext{Arealet af denne trapez svarer tilnærmelsesvist til arealet under funktionen. Så derfor kan vi sige at arealet af trapezen tilnærmelsesvist svarer til værdien af det bestemte integral:} \nonumber
+\\ \int_{a}^{b}f(x) &\approx \frac{b-a}{2} (f(a)+f(b))
+\end{align}
 
-\item Forskellige metoder
-\begin{itemize}
-\item Hvordan ser de forskellige regler ud
-\item Hvordan er deres præcision
-\end{itemize}
-
-\end{itemize}
-
-\subsection{Hvorfor spørger jeg}
-\label{sec:hvorfor}
-Jeg skal jo relatere min matematik til IT, og det er heldigsvis nærliggende ved Numerisk Integration. De fleste matematikprogrammer som CAS, Mathcad eller lign. bruger Numerisk Integration til at udregne arealet under funktioner.
-\subsection{Hvad spørger jeg til}
-Jeg skal arbejde med en masse matematiske formler og udledningen af beviser. Samtidig skal jeg programmere noget der kan udregne arealet under grafer. Enten et program til computeren, en smartphone-app eller en hjemmeside. Så derfor skal jeg også arbejde med et programmeringssprog. Jeg skal selvfølgelig analysere metoderne og deres præcision.
-\subsection{Hvad spørger jeg med}
-Jeg er i tvivl om spørgsmålet og hvad der egentlig menes med det, men har prøvet at besvare det på den måde jeg tolker det som.
-\\
-Jeg vil undersøge forskellige metoder til at løse numerisk integration, herunder midtpunktsreglen, trapezreglen og måske simpsonsreglen, og undersøge deres præcision. For at inddrage IT vil jeg programmere et program, der vha. en af metoderne kan udregne arealet af en funktion.
-
-\subsection{Hvordan vil jeg gå frem}
-Opbygningen af matematikdelen passer med afsnit \emph{2.2 Hvad spørger jeg om}. Udover matematikdelen skal der være en IT-del, hvor jeg vil beskrive de metoder jeg bruger i programmet og forklare kildekoden.
-
+\subsubsection{Opdeling i intervaller}
+\label{sec:opdelingtrapezmetoden}
+Som man kan se på figur \ref{fig:trapezmetoden} er trapezmetoden meget upræcis i forhold til det bestemte integral. Dette kan man forbedre ved at dele intervallet $[a;b]$ op i flere delintervaller, $n$. Dvs. at vi deler vores funktion op i mindre intervaller, som vi så finder arealet af med trapezmetoden. Disse delintervaller kalder vi for $x_0, x_1, \cdots x_n$. Vi skal bruge højden på trapezen, som er længden af delintervallet $x_0 - x_1$. I dette tilfælde svarer det til:
+\begin{align}
+h = x_1-x_0 = x_2-x_1 = \cdots = x_n - x_{n-1}
+\end{align}
+Ud fra dette kan vi bestemme at højden, $h$, må svare til intervallet $[a;b]$ opdelt i $n$ intervaller:
+\begin{align}
+h=\frac{b-a}{n}
+\end{align}
+Det samlede areal under funktionen kan betegnes som summen af alle delintervallerne:
+\begin{align}
+A &= \lim\limits_{n \rightarrow \infty} \sum_{i=1}^{n} \frac{h}{2}(f(x_{i}) + f(x_{i+1}))
+\approx \int_{a}^{b}f(x) &\text{hvor }h=\frac{b-a}{n}
+\end{align}
+Når n går mod uendelig bliver vores delinterval infinitesimalt lille, hvilket vil sige at summen af alle trapezarealerne nærmer sig det bestemte integral. Det bestemte integral svarer faktisk til at vi deler arealet op i uendelige små og uendelig mange led.
+\\\\
+For at udlede dette til formlen for trapezmetoden bliver vi nødt til at opskrive dette på en lidt anden måde.
+\begin{align}
+A &= \frac{h}{2}(f(x_0)+ f(x_1)) + \frac{h}{2}(f(x_1)+ f(x_2)) + \cdots + \frac{h}{2}(f(x_{n-1})+ f(x_n)) \nonumber
+\\ &= h(\frac{1}{2}f(x_0) + \frac{1}{2}f(x_1)) + h(\frac{1}{2}f(x_1) + \frac{1}{2}f(x_2)) + \cdots + h(\frac{1}{2}f(x_{n-1}) + \frac{1}{2}f(x_n)) \nonumber
+\\ &= h \cdot \frac{1}{2}f(x_0) + h \cdot \frac{1}{2}f(x_1) + h \cdot \frac{1}{2}f(x_1) + h \cdot \frac{1}{2}f(x_2) + \cdots + h \cdot \frac{1}{2}f(x_{n-1}) + h \cdot \frac{1}{2}f(x_n) \nonumber
+\end{align}
+Dette bliver reduceret til formlen for trapezmetoden (\ref{eq:trapezmetoden})
+\begin{align}
+\label{eq:trapezmetoden}
+\boxed{\int_{a}^{b}f(x) \approx \frac{h}{2}(f(x_0) + 2f(x_1) + \cdots + 2f(x_{n-1}) + f(x_n))} \\ \text{Hvor } h=\frac{b-a}{n} \nonumber
+\end{align}
 
 \clearpage
 \addcontentsline{toc}{section}{Litteratur}
