--- a/Numerisk integration.tex
+++ b/Numerisk integration.tex
@@ -90,6 +90,7 @@ Som navnet trapezmetoden så fint hentyder til, opdeler vi vores funktion i en t
 \caption{Trapezmetoden}
 \label{fig:trapezmetoden}
 \end{figure}
+hej
 
 På figur \ref{fig:trapezmetoden} kan man se, hvordan trapezmetoden opdeler en parabel i en trapez. Denne trapez har intervallet $[a;b]$. Længden $a=f(a)$ og længden $b=f(b)$. Formlen for arealet af en trapez ses i formel \ref{eq:trapezareal}
 \begin{equation}
