--- a/Numerisk integration.tex
+++ b/Numerisk integration.tex
@@ -58,6 +58,8 @@ Compare the typeset output side-by-side with the input document.smøøre
 
 \tableofcontents
 
+\section{Indledning}
+
 \section{Forklaring af numerisk integration}
 
 
@@ -181,6 +183,16 @@ Som man kan se på ligningen for $y_1$ \eqref{eq:ubekendte} har vi allerede fåe
 \subsubsection{Opdeling i flere intervaller}
 \label{sec:simpsonopdeling}
 
+\section{Computeralgoritmer og numerisk integration}
+\subsection{Trapezmetoden}
+\subsection{Simpsons metode}
+\subsection{Analyse af nøjagtighed}
+\subsubsection{Trapezmetoden}
+\subsubsection{Simpsons metode}
+
+\section{Perspektivering}
+\section{Konklusion}
+
 \clearpage
 \addcontentsline{toc}{section}{Litteratur}
 \begin{thebibliography}{9}
@@ -208,5 +220,9 @@ Som man kan se på ligningen for $y_1$ \eqref{eq:ubekendte} har vi allerede fåe
 	\url{http://uvm.dk/~/media/UVM/Filer/Udd/Gym/PDF12/Proever\%20og\%20eksamen/120608\%20Mat\%20A\%20htx\%20Forberedelsesmateriale.pdf}
 
 \end{thebibliography}
+
+\section{Kildekritik}
+\section{Bilag}
+
 
 \end{document}
