--- a/Numerisk integration.tex
+++ b/Numerisk integration.tex
@@ -55,9 +55,9 @@ Vejleder: Stig og CHR}
 This article demonstrates a basic set of LaTeX formatting commands.
 Compare the typeset output side-by-side with the input document.smøøre
 \end{abstract}
-
+\newpage
 \tableofcontents
-
+\newpage
 \section{Indledning}
 
 \section{Forklaring af numerisk integration}
