Nyt listings navn

--- a/Numerisk integration.tex
+++ b/Numerisk integration.tex
@@ -36,8 +36,7 @@
 }
  
 \lstset{style=mystyle}
-\renewcommand\lstlistingname{Fil}
-\renewcommand{\abstractname}{Hej}
+\renewcommand\lstlistingname{Funktion}
 \addto{\captionsdanish}{\renewcommand{\abstractname}{Abstract}}
 \numberwithin{equation}{section}
 
