--- a/Numerisk integration.tex
+++ b/Numerisk integration.tex
@@ -16,7 +16,7 @@
 \definecolor{purple}{rgb}{0.65, 0.12, 0.82}
 
 \lstdefinelanguage{JavaScript}{
-	keywords={typeof, new, true, false, catch, function, return, null, catch, switch, var, if, in, while, do, else, case, break, eval, getElementById},
+	keywords={typeof, new, true, false, catch, function, return, null, catch, switch, var, if, in, while, do, else, case, break, eval, getElementById, exp, pow},
 	keywordstyle=\color{blue}\bfseries,
 	ndkeywords={class, export, boolean, throw, implements, import, this, document},
 	ndkeywordstyle=\color{darkgray}\bfseries,
@@ -46,7 +46,7 @@
 	captionpos=t
 }
 
-\renewcommand\lstlistingname{Funktion}
+\renewcommand\lstlistingname{Algoritme}
 \addto{\captionsdanish}{\renewcommand{\abstractname}{Abstract}}
 \numberwithin{equation}{section}
 
@@ -274,87 +274,139 @@ Jeg har brugt JavaScript til at opbygge mine algoritmer for Trapezmetoden og Sim
 Når man skal skrive en algoritme, er det næsten umuligt ikke at have et såkaldt \emph{loop}. Et loop, løkke på dansk, er en kode, der kører så længe at en defineret erklæring passer. Den løkke jeg skal bruge til mine algoritmer, skal køre $n$ antal gange, altså den skal køre det antal gange, jeg har delt min funktion op i. I teorien kan n bevæge sig mod uendelig, men dette vil så også tage op mod uendelig tid. For at finde en 100\% præcis værdi af vores numeriske integration, kan vi godt risikere at vi kommer op på et delinterval på flere millioner. Derfor at det vigtigt at vi optimere løkken mest muligt, da det er en kode, der potentielt skal køre mange millioner gange. En måde at optimere løkken på er ved at vælge en while-løkke i stedet for en for-løkke. Et hurtigt eksperiment\footnote{\cite{forvswhile}} viser, at while-løkken i gennemsnit er en smule hurtige\footnote{Det skal nævnes at det ikke er et 100\% korrekt eksperiment, da andre processer fra computeren, kan have haft en rolle i beregningstiden. Hvis man dog fjerne de unormale resultater fra det samlede billede, er while-løkken stadig gennemsnitlig hurtigst.}. Samtidig udførte eksperimentet kun en meget simpel beregning, hvor den algoritme vi skal udregne, er meget mere avanceret. Derfor kan der være en stor besparing i tid og beregningskraft, hvis man bruger en while-løkke i stedet for en for-løkke.
 
 
-\subsection{Trapezmetoden}
+\subsection{Opbygning af algoritmerne}
+Når man skal lave en algoritme til en matematisk funktion, er det vigtigt at have analyseret formlen først, så man kan skabe en præcis og effektiv algoritme. Jeg har udarbejdet en fungerende algoritme, som jeg har prøvet at effektivisere så meget som muligt. Derefter har jeg analyseret nøjagtigheden og effektiviteten af både metoden og algoritmen.
+\subsubsection{Trapezmetoden}
+Formlen for Trapezmetoden \eqref{eq:trapezmetoden}, som også kan ses på side \pageref{eq:trapezmetoden}, ser således ud:
+\begin{align}
+\int_{a}^{b}f(x) \approx \frac{h}{2}(f(x_0) + 2f(x_1) + \cdots + 2f(x_{n-1}) + f(x_n)) &&\text{Hvor } h=\frac{b-a}{n} \nonumber
+\end{align}
+Når man analyserer Trapezmetoden i forhold til at skulle lave en algoritme, er der et par ting man skal have fokus på. For det første er $\frac{h}{2}$ uden for parentesen hvilket gør, at vi til sidst i algoritmen kan udregne summen af delarealerne ganget med $\frac{h}{2}$. En anden ting er, at første og sidste punkt, henholdsvis $x_0$ og $x_n$ ikke skal ganges med 2 ligesom resten af delarealerne. Derfor kan vi sætte disse to uden for vores hoved-løkke, hvilket gør at vi ikke skal bekymre os om dem i løkken.
+Ud fra denne korte analyse har jeg skrevet min algoritme for Trapezmetoden i intervallet $[a;b]$ og med antallet af delintervaller $n$.
 \begin{lstlisting}[caption="udregnArealTrapezmetoden()"]
-	function udregnArealTrapezmetoden(a,b,n) {
-		var h = (b-a)/n;
-		var areal;
-		funktion = document.getElementById("funktion").value;
-		
-		i = 1;
-		w = 1;
-		x = a;
-		
-		areal = eval(funktion);
-		while(w < n) {
-			x = x + h;
-			areal += 2*eval(funktion);
-			w++;
-		}
-		
-		x = b;
-		areal += eval(funktion);
-		areal = (h/2)*areal;
-		
-		return areal;
+function udregnArealTrapezmetoden(a,b,n) {
+	var h = (b-a)/n;
+	var funktion = document.getElementById("funktion").value;
+	
+	var w = 1;
+	var x = a;
+	
+	var areal = eval(funktion);
+	while(w < n) {
+		x = x + h;
+		areal += 2*eval(funktion);
+		w++;
 	}
+		
+	x = b;
+	areal += eval(funktion);
+	areal = (h/2)*areal;
+		
+	return areal;
+}
 \end{lstlisting}
-\subsection{Simpsons metode}
+
+Min algoritme er opbygget som en funktion med variabler $a,b,n$. $a$ er startintervallet, $b$ er slutintervallet og $n$ er antal delintervaller, præcis som i formlen for Trapezmetoden. $h$ defineres præcis som i Trapezmetoden, dvs $h=\frac{b-a}{n}$. Variablen $funktion$ tager værdien fra et input der har id'et "funktion", som indeholder vores funktion formateret som JavaScript. Et eksempel på dette ses her for $f(x) = e^{x^2}$
+\begin{lstlisting}
+Math.exp(Math.pow(x,2))
+\end{lstlisting}
+Variablen $w$ er vores tæller som starter på 1. $x$ bliver sat til a, da vi skal substituere $x$ ind i vores funktion. På linje 8 udregnes arealet af $x_1$, som sker før vores løkke, som nævnt i analysen. På linje 9 starter vores løkke, som kører så længe w er mindre end n. Dvs. at løkken kører lige ind til vi når sidste punkt, $x_{n-1}$, så vi kan regne $x_n$ særskilt. Inde i løkken bliver x sat til længden af delintervallet, $h$ lagt sammen med sig selv, når vi finder den næste x-værdi i intervallet. Så udregnet arealet af delintervallet og ligges til variablen $areal$. Derefter lægger vi 1 til w, så den tæller op mod n.
+
+
+\subsubsection{Simpsons metode}
 \begin{lstlisting}[caption="udregnArealSimpsonsMetode()"]
-	function udregnArealSimpsonsMetode(a,b,n) {
-		var h = (b-a)/n;
-		var areal;
-		
-		i = 1;
-		w = 1;
-		x = a;
-		
-		areal = eval(document.getElementById("funktion").value);
-		while(w < n) {
-			x = x +h;
-			if(w%2 == 0)
-				areal += 2*eval(document.getElementById("funktion").value);
-			else
-				areal += 4*eval(document.getElementById("funktion").value);
-			
-			w++;
-		}
-		
-		x = b;
-		areal += eval(document.getElementById("funktion").value);
-		areal = (h/3)*areal;
-		
-		return areal;
-	}
+function udregnArealSimpsonsMetode(a,b,n) {
+var h = (b-a)/n;
+var funktion = document.getElementById("funktion").value;
+
+var w = 1;
+var x = a;
+
+var areal = eval(funktion);
+while(w < n) {
+	x = x +h;
+	if(w%2 == 0)
+		areal += 2*eval(funktion);
+	else
+		areal += 4*eval(funktion);
+	
+	w++;
+}
+
+x = b;
+areal += eval(funktion);
+areal = (h/3)*areal;
+
+return areal;
 }
 \end{lstlisting}
 \subsection{Analyse af nøjagtighed} 
 \subsubsection{Trapezmetoden}
+
 \begin{table}[H]
-	\caption {Nøjagtighed af Trapezmetoden for $f(x)=e^x$} 
+	\caption {Nøjagtighed af Trapezmetoden for $f(x)=e^x$ i intervallet $[-1;3]$} 
 \begin{center}
-\begin{tabular}{|c|r@{.}l|r @{.} l|}
-	\hline $n$ & \multicolumn{2}{|c|}{Trapezmetoden} & \multicolumn{2}{|c|}{Bestemt integral} \\ 
-	\hline 2 & 25&89 & 19&718\\ 
-	\hline 4 & 21&334 & 19&718\\ 
-	\hline 10 & 19&98 & 19&718\\ 
-	\hline 20 & 19&738 & 19&718\\ 
-	\hline 40 & 19&734 & 19&718\\ 
-	\hline 180 & 19&718 & 19&718 \\ 
+\begin{tabular}{|c|r@{.}l|r @{.} l|r @{.} l|}
+	\hline $n$ & \multicolumn{2}{|c|}{Beregningstid} & \multicolumn{2}{|c|}{Trapezmetoden} & \multicolumn{2}{|c|}{Bestemt integral}
+	\\
+	\hline 2 & 0&05ms & 25&89 & 19&718\\ 
+	\hline 4 & 0&016ms & 21&334 & 19&718\\ 
+	\hline 10 & 0&019ms & 19&98 & 19&718\\ 
+	\hline 20 & 0&022ms & 19&738 & 19&718\\ 
+	\hline 40 & 0&029ms & 19&734 & 19&718\\ 
+	\hline 180 & 0&088ms & 19&718 & 19&718\\ 
 	\hline 
 \end{tabular}
 \end{center}
 \end{table}
+
+\begin{table}[H]
+	\caption {Nøjagtighed af Trapezmetoden for $f(x)=e^{x^2}$ i intervallet $[-1;3]$} 
+	\begin{center}
+		\begin{tabular}{|c|r@{.}l|r @{.} l|l|}
+			\hline $n$ & \multicolumn{2}{|c|}{Beregningstid} & \multicolumn{2}{|c|}{Trapezmetoden} & Bestemt integral
+			\\
+			\hline 2 & 0&020ms & 8111&239 & 1446.008\\ 
+			\hline 4 & 0&020ms & 4111&218 & 1446.008\\ 
+			\hline 10 & 0&021ms & 2032&925 & 1446.008\\ 
+			\hline 20 & 0&022ms & 1603&752 & 1446.008\\ 
+			\hline 40 & 0&036ms & 1486&247 & 1446.008\\ 
+			\hline 180 & 0&090ms & 1448&008 & 1446.008\\
+			\hline 400 & 0&182ms & 1446&413 & 1446.008\\
+			\hline 2000 & 1&008ms & 1446&024 & 1446.008\\
+			\hline
+		\end{tabular}
+	\end{center}
+\end{table}
 \subsubsection{Simpsons metode}
 \begin{table}[H]
-	\caption {Nøjagtighed af Simpsons metode for $f(x)=e^x$} 
+	\caption {Nøjagtighed af Simpsons metode for $f(x)=e^x$ i intervallet $[-1;3]$} 
 	\begin{center}
-		\begin{tabular}{|c|r @{.} l|r @{.} l|}
-			\hline $n$ & \multicolumn{2}{|c|}{Simpsons metode} & \multicolumn{2}{|c|}{Bestemt integral} \\ 
-			\hline 2 & 20&884 & 19&718\\ 
-			\hline 4 & 19&815 & 19&718\\ 
-			\hline 10 & 19&72 & 19&718\\ 
-			\hline 14 & 19&718 & 19&718\\ 
+		\begin{tabular}{|c|r@{.}l|r @{.} l|r @{.} l|}
+			\hline $n$ & \multicolumn{2}{|c|}{Beregningstid} & \multicolumn{2}{|c|}{Simpsons metode} & \multicolumn{2}{|c|}{Bestemt integral}
+			\\ 
+			\hline 2 & 0&0179ms & 20&884 & 19&718\\ 
+			\hline 4 & 0&026ms & 19&815 & 19&718\\ 
+			\hline 10 & 0&040ms & 19&72 & 19&718\\ 
+			\hline 14 & 0&050ms & 19&718 & 19&718\\ 
+			\hline 
+		\end{tabular}
+	\end{center}
+\end{table}
+
+\begin{table}[H]
+	\caption {Nøjagtighed af Simpsons metode for $f(x)=e^{x^2}$ i intervallet $[-1;3]$} 
+	\begin{center}
+		\begin{tabular}{|c|r@{.}l|r @{.} l|l|}
+			\hline $n$ & \multicolumn{2}{|c|}{Beregningstid} & \multicolumn{2}{|c|}{Simpsons metode} & Bestemt integral
+			\\ 
+			\hline 2 & 0&018ms & 5411&117 & 1446.008\\ 
+			\hline 4 & 0&020ms & 2777&877 & 1446.008\\ 
+			\hline 10 & 0&039ms & 1593&515 & 1446.008\\ 
+			\hline 20 & 0&025ms & 1460&694 & 1446.008\\ 
+			\hline 40 & 0&037ms & 1447&079 & 1446.008\\ 
+			\hline 180 & 0&098ms & 1446&011 & 1446.008\\
+			\hline 252 & 0&129ms & 1446&008 & 1446.008\\
 			\hline 
 		\end{tabular}
 	\end{center}
