--- a/Numerisk integration.tex
+++ b/Numerisk integration.tex
@@ -311,9 +311,18 @@ Min algoritme er opbygget som en funktion med variabler $a,b,n$. $a$ er startint
 Math.exp(Math.pow(x,2))
 \end{lstlisting}
 Variablen $w$ er vores tæller som starter på 1. $x$ bliver sat til a, da vi skal substituere $x$ ind i vores funktion. På linje 8 udregnes arealet af $x_1$, som sker før vores løkke, som nævnt i analysen. På linje 9 starter vores løkke, som kører så længe w er mindre end n. Dvs. at løkken kører lige ind til vi når sidste punkt, $x_{n-1}$, så vi kan regne $x_n$ særskilt. Inde i løkken bliver x sat til længden af delintervallet, $h$ lagt sammen med sig selv, når vi finder den næste x-værdi i intervallet. Så udregnet arealet af delintervallet og ligges til variablen $areal$. Derefter lægger vi 1 til w, så den tæller op mod n.
+Efter løkken har kørt, sætter vi $x$ til at være vores sidste værdi, $b$, og regner arealet for det sidste delinterval. Til sidst ganges hele det udregnede delareal med $\frac{h}{2}$ for at finde det samlede areal. Funktionen returnerer arealet til sidst.
 
 
 \subsubsection{Simpsons metode}
+Formlen for Simpsons metode \eqref{eq:simpsonsmetode}, som også kan ses på side \pageref{eq:simpsonsmetode}, ser således ud:
+\begin{align}
+\int_{a}^{b} \approx \frac{h}{3}(f(x_0) + 4f(x_1) + 2f(x_2) + 4f(x_3) + \cdots + 2f(x_{n-2}) + 4f(x_{n-1}) + f(x_n) ) \nonumber
+\\ \text{Hvor } h=\frac{b-a}{h} \text{ og $n$ er lige} \nonumber
+\end{align}
+Simpsons metode ser en del anderledes ud end Trapezmetoden, så derfor skal den analyseres anderledes, og algoritmen kommer formentlig også til at blive mere avanceret.\\
+Igen har vi h uden for parentesen, dog bare $\frac{h}{3}$ i stedet. Samtidig skal punkt $x_0$ og $x_n$ ikke ganges med noget, så de kan også beregnes uden for løkken. En ting der skal lægges meget mærke til ved Simpsons metode, er at den skifter mellem at multiplicere med 4 og 2. En måde at beskrive det er, at alle ulige skal ganges med 4 og lige med 2. Derfor skal løkken indeholde en \emph{if/else} sætning, der tjekker om det er et lige eller ulige antal vi beregner på. Ud fra denne analyse, har jeg skrevet min algoritme for Simpsons metode i intervallet $[a;b]$ og med antallet af delintervaller $n$
+
 \begin{lstlisting}[caption="udregnArealSimpsonsMetode()"]
 function udregnArealSimpsonsMetode(a,b,n) {
 var h = (b-a)/n;
@@ -340,11 +349,19 @@ areal = (h/3)*areal;
 return areal;
 }
 \end{lstlisting}
-\subsection{Analyse af nøjagtighed} 
-\subsubsection{Trapezmetoden}
+
+Igen er algoritmen opbygget som en funktion med intervallet $[a;b]$ og antal delintervaller $n$. De første 8 linjer er præcis det samme som i Algoritme 1: "udregnArealSimpsonsMetode()", hvor der defineres forskellige variabler, og arealet for $x_1$ udregnes. Det næste er while-løkken på linje 9 som kører så længe w er mindre end antal delintervaller $n$. Først sættes x til at være næste delinterval, og dernæst tjekkes der om tælleren, $w$, er et lige eller ulige tal. Dette gør den vha. modulus funktionen, (\emph{skrives \% i JavaScript}), som er en matematisk funktion. Modulus svarer til det positive heltal, der er i rest, når man dividerer. Så når man tager modulus 2 af et tal, giver det enten en rest på 1, når tallet af ulige, og ellers en rest på 0, da alle lige tal går op i 2. Arealet af delintervallet regnes så ud fra denne \emph{if/else}-sætning, hvor lige ganges med 2 og ulige med 4.
+\\Resten af koden afviger kun fra algoritmen til Trapezmetoden ved at gange det samlede udregnede areal med $\frac{h}{3}$ som det står i Simpsons metode \eqref{eq:simpsonsmetode}.
+\subsection{Vurdering af effektiviteten og nøjagtigheden}
+Helt grundlæggende vil jeg 
+Når jeg skal vurdere nøjagtigheden, vil jeg både vurdere selve metoden og algoritmen. Hvis algoritmen er skrevet korrekt, burde der ikke være forskel på nøjagtigheden i forhold til metoden. Jeg vil undersøge nøjagtigheden ud fra resultatet af algoritmen/metoden opdelt i forskellige delintervaller, $n$, i forhold til det bestemte integral.
+\\Effektiviteten kan være svær at vurdere, da jeg ikke har noget at stille mine data op imod. Jeg har undersøgt hvor lang tid det tager, at køre algoritmen med forskellige delintervaller. Denne tid kan sammenlignes med nøjagtigheden af algoritmen, og ud fra det vil jeg vise en sammenhæng mellem præcision og hastighed.\\
+Jeg har udvalgt 2 funktioner som minder om hinanden, dog er den ene en del mere avanceret end den anden. Den ene er $e^x$ og den anden $e^{x^2}$. Den anden funktion, $e^{x^2}$, er en af de funktioner man ikke kan bestemme det bestemte integral af, mens den første er simpel at bestemme. Til at bestemme arealet der er så tæt på det bestemte integral som muligt for $e^{x^2}$, har jeg brugt mathcad, som har givet den værdi der står i tabel \ref{tab:trapezmetodenex2} og \ref{tab:simpsonsmetodeex2}
+\subsubsection{Nøjagtighed og effektivitet når $f(x)=e^x$}
 
 \begin{table}[H]
-	\caption {Nøjagtighed af Trapezmetoden for $f(x)=e^x$ i intervallet $[-1;3]$} 
+	\caption {Nøjagtighed af Trapezmetoden for $f(x)=e^x$ i intervallet $[-1;3]$}
+	\label{tab:trapezmetodenex}
 \begin{center}
 \begin{tabular}{|c|r@{.}l|r @{.} l|r @{.} l|}
 	\hline $n$ & \multicolumn{2}{|c|}{Beregningstid} & \multicolumn{2}{|c|}{Trapezmetoden} & \multicolumn{2}{|c|}{Bestemt integral}
@@ -359,9 +376,25 @@ return areal;
 \end{tabular}
 \end{center}
 \end{table}
-
+\begin{table}[H]
+	\caption {Nøjagtighed af Simpsons metode for $f(x)=e^x$ i intervallet $[-1;3]$} 
+	\label{tab:simpsonsmetodeex}
+	\begin{center}
+		\begin{tabular}{|c|r@{.}l|r @{.} l|r @{.} l|}
+			\hline $n$ & \multicolumn{2}{|c|}{Beregningstid} & \multicolumn{2}{|c|}{Simpsons metode} & \multicolumn{2}{|c|}{Bestemt integral}
+			\\ 
+			\hline 2 & 0&0179ms & 20&884 & 19&718\\ 
+			\hline 4 & 0&026ms & 19&815 & 19&718\\ 
+			\hline 10 & 0&040ms & 19&72 & 19&718\\ 
+			\hline 14 & 0&050ms & 19&718 & 19&718\\ 
+			\hline 
+		\end{tabular}
+	\end{center}
+\end{table}
+\subsubsection{Nøjagtighed og effektivitet når $f(x)=e^{x^2}$}
 \begin{table}[H]
 	\caption {Nøjagtighed af Trapezmetoden for $f(x)=e^{x^2}$ i intervallet $[-1;3]$} 
+	\label{tab:trapezmetodenex2}
 	\begin{center}
 		\begin{tabular}{|c|r@{.}l|r @{.} l|l|}
 			\hline $n$ & \multicolumn{2}{|c|}{Beregningstid} & \multicolumn{2}{|c|}{Trapezmetoden} & Bestemt integral
@@ -378,24 +411,10 @@ return areal;
 		\end{tabular}
 	\end{center}
 \end{table}
-\subsubsection{Simpsons metode}
-\begin{table}[H]
-	\caption {Nøjagtighed af Simpsons metode for $f(x)=e^x$ i intervallet $[-1;3]$} 
-	\begin{center}
-		\begin{tabular}{|c|r@{.}l|r @{.} l|r @{.} l|}
-			\hline $n$ & \multicolumn{2}{|c|}{Beregningstid} & \multicolumn{2}{|c|}{Simpsons metode} & \multicolumn{2}{|c|}{Bestemt integral}
-			\\ 
-			\hline 2 & 0&0179ms & 20&884 & 19&718\\ 
-			\hline 4 & 0&026ms & 19&815 & 19&718\\ 
-			\hline 10 & 0&040ms & 19&72 & 19&718\\ 
-			\hline 14 & 0&050ms & 19&718 & 19&718\\ 
-			\hline 
-		\end{tabular}
-	\end{center}
-\end{table}
 
 \begin{table}[H]
 	\caption {Nøjagtighed af Simpsons metode for $f(x)=e^{x^2}$ i intervallet $[-1;3]$} 
+	\label{tab:simpsonsmetodeex2}
 	\begin{center}
 		\begin{tabular}{|c|r@{.}l|r @{.} l|l|}
 			\hline $n$ & \multicolumn{2}{|c|}{Beregningstid} & \multicolumn{2}{|c|}{Simpsons metode} & Bestemt integral
